view pager implementation , app crashing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
 
     <string name="location">Location</string>
     <string name="contact">Contact</string>
+    <string name="developed_by">Designed &amp; Developed By Arya</string>
 
 </resources>
