--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,15 @@
 
     <string name="location">Location</string>
     <string name="contact">Contact</string>
+
+    <!--For the About app Fragment-->
     <string name="developed_by">Designed &amp; Developed By Arya</string>
 
+    <!--Urls used in webviews-->
+    <string name="url_facebook_page">https://google.com/</string>
+    <string name="url_college">https://google.com/</string>
+
+    <!--Keys used in shared preferences-->
+    <string name="login_key">LOGIN_KEY</string>
+    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
 </resources>
