--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <!--Keys used in shared preferences-->
     <string name="login_key">LOGIN_KEY</string>
     <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
+
+    <!--TODO static data -->
+
 </resources>
