--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <!--Filter-->
     <string name="filter">FILTER</string>
 
+    <string name="answer1">This is the answer to 1 FAQ</string>
+    <string name="answer2">This is the answer to 2 FAQ</string>
 </resources>
