--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <!--Keys used in shared preferences-->
     <string name="is_logged_in">IS_LOGGED_IN</string>
     <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
+    <string name="userid">Userid</string>
+    <string name="username">Username</string>
+    <string name="useremail">Useremail</string>
 
     <!--Image Descriptions-->
     <string name="image_company">Company Image</string>
