--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
         <item>2014</item>
         <item>2015</item>
         <item>2016</item>
+        <item>2017</item>
     </string-array>
     <string-array name="branch_array">
         <item>CS</item>
