minor refractoring and comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,10 @@
 
     <string name="forget_password">Forget Password</string>
 
+    <string name="forget_password_prompt">Next step will give you a new password on given email id</string>
+
+
+
     <string name="isNerdCheckBox_text">I am doing Higher studies</string>
 
     <string name="designation">Designation</string>
