--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
     </string-array>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
@@ -37,7 +36,8 @@
     <string name="contact">Contact</string>
 
     <!--For the About app Fragment-->
-    <string name="developed_by"> Developed By Ashish Surana \n ashishsurana.in</string>
+    <string name="developed_by"> Developed By Ashish Surana \n ashishsurana.in \n Design Credits : Navneet Sharma</string>
+    <string name="github_link">This is Proudly a Open Source Software\nWe would love to hear the suggestions and Pull Request\nGithub : https://github.com/ashishsurana/Alumni</string>
 
     <!--Urls used in web views-->
     <string name="url_facebook_page">https://www.facebook.com/aryacollege.in/</string>
@@ -73,7 +73,7 @@
 
     <!--Settings-->
     <string name="my_profile">My Profile</string>
-    <string name="facebook">Facebook</string>
+    <string name="facebook">Facebook Page</string>
     <string name="post_a_job">Post a Job</string>
     <string name="about_app">About Arya Alumni App</string>
     <string name="about_college">About College</string>
@@ -83,6 +83,8 @@
     <string name="rate_us">Rate Us</string>
     <string name="log_out">Log Out</string>
     <string name="log_in">Log In</string>
+
+
 
 
     <!--Login/signup-->
@@ -103,5 +105,42 @@
     <string name="error_name">Please provide full name</string>
     <string name="error_">Make it a bit stronger</string>
 
+    <!--Events Name Links/ image url / event page url -->
+    <string name="event_1">Tehnika Naitus</string>
+    <string name="event_1_url">http://www.aryacollege.in/tehnika-naitus.php</string>
+    <string name="event_1_image_url">http://139.59.13.112:8000/event/1.jpg</string>
+
+    <string name="event_2">Shraddhanjali</string>
+    <string name="event_2_url">http://www.aryacollege.in/shradhanjali.php</string>
+    <string name="event_2_image_url">http://139.59.13.112:8000/event/2.jpg</string>
+
+
+    <string name="event_3">Graduation Day</string>
+    <string name="event_3_url">http://www.aryacollege.in/graduation-day.php</string>
+    <string name="event_3_image_url">http://139.59.13.112:8000/event/3.jpg</string>
+
+    <string name="event_4">Zephyr</string>
+    <string name="event_4_url">http://www.aryacollege.in/zephyr.php</string>
+    <string name="event_4_image_url">http://139.59.13.112:8000/event/4.jpg</string>
+
+    <string name="event_5">Victory</string>
+    <string name="event_5_url">http://www.aryacollege.in/the-annualday.php</string>
+    <string name="event_5_image_url">http://139.59.13.112:8000/event/5.png</string>
+
+    <string name="event_6">Engineer Day</string>
+    <string name="event_6_url">http://www.aryacollege.in/engineer-day.php</string>
+    <string name="event_6_image_url">http://139.59.13.112:8000/event/6.jpg</string>
+
+    <string name="event_7">Auto Ignition</string>
+    <string name="event_7_url">http://www.aryacollege.in/autoignition.php</string>
+    <string name="event_7_image_url">http://139.59.13.112:8000/event/7.jpg</string>
+
+    <string name="event_8">TopGuns</string>
+    <string name="event_8_url">http://www.aryacollege.in/the-farewellparty.php</string>
+    <string name="event_8_image_url">http://139.59.13.112:8000/event/8.png</string>
+
+    <string name="event_9">Exergie</string>
+    <string name="event_9_url">http://www.aryacollege.in/exergie.php</string>
+    <string name="event_9_image_url">http://139.59.13.112:8000/event/9.jpg</string>
 
 </resources>
