--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,11 +61,20 @@
     <string name="apply_filter">APPLY</string>
 
     <!--Faq data-->
-    <string name="ques_1">Question 1</string>
-    <string name="answer1">This is the answer to 1 FAQ</string>
+    <string name="ques_1">Why do we need Alumni app?</string>
+    <string name="answer1">Our social media including Facebook, Linkedin, Twitter, Whatsapp when
+        integrated together are not that capable to connect all the people of same place altogether.
+        Thereby we needed a platform where we can again tie up all the people of any institution
+        from base to brim. Alumni application is the best solution for this. This application will
+        help you to open the door to get the updates about the alumni and get there guidance for
+        various causes. </string>
 
-    <string name="ques_2">Question 2</string>
-    <string name="answer2">This is the answer to 2 FAQ</string>
+    <string name="ques_2">What we want?</string>
+    <string name="answer2">We need to know our alumni, we should know each other. This app is a
+        crossroad of Alumni. It invites people to stretch the limits of their social circles and
+        enhance their thinking with a diversity of new ideas and perspectives. It provides a
+        welcoming space for viewpoints to collide in unexpected ways, and for creative sparks to
+        fly. We need a community with these features.</string>
 
     <string name="ques_3">Question 3</string>
     <string name="answer3">This is the answer to 3 FAQ</string>
