--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,8 +79,12 @@
     <string name="ques_3">Question 3</string>
     <string name="answer3">This is the answer to 3 FAQ</string>
 
-    <string name="ques_4">Question 4</string>
-    <string name="answer4">This is the answer to 4 FAQ</string>
+    <string name="ques_4">How can you get benefit?</string>
+    <string name="answer4">Alumni is a former student of an institution, who is an ace experience
+        holder and well laid. Having the lore of their experience can be the most useful aid anyone
+        can have. Interacting with them can give us an image about the present scenario and can
+        help us to grow with the requirements of the ongoing world. This can help us providing a
+        good opportunity using the alumni’s reference or having known their proficiency.</string>
 
     <!--Main Screen-->
     <string name="members">Members</string>
