Bug fixing and ready with v2.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
 
     <string name="log_out_prompt">You are successfully logged Out</string>
 
-    <string name="app_share_text">Get the alumni app through this link and be a part of awesome community</string>
+    <string name="app_share_text">https://play.google.com/store/apps/details?id=in.surana.ashish.alucon \n Get the alumni app and be a part of awesome community</string>
 
 
     <!--Login/signup-->
